--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -16,7 +16,7 @@
     width: 100%;
     height: 660px;
     @include backgroundImage(cover);
-    //background-image: url('/images/about_banner.jpg');
+    background-image: url('/images/about_banner.jpg');
     margin: auto;
 
     @media (max-width: 1650px) {
@@ -42,6 +42,7 @@
     align-items: center;
     margin: 0 auto;
     max-width: 1330px;
+    height: 100%;
 
     @media (max-width: 1220px) {
       flex-direction: column;
@@ -57,7 +58,6 @@
     }
 
   }
-
   &__text {
     font-weight: 300;
     font-size: 16px;
@@ -86,6 +86,7 @@
       text-align: left;
     }
   }
+
 
   &__left_block {
     display: flex;
@@ -291,8 +292,8 @@
   }
 
   .tiles .tile:hover > img {
-    width: 130px;
-    height: 130px;
+    width: 130px !important;
+    height: 130px !important;
     z-index: 10;
   }
   .tiles .tile img {
@@ -497,39 +498,9 @@
     }
   }
 
-  .progressbar {
-    width: 100px;
-    height: 100px;
 
-    @include tabletScreen {
-      width: 90px;
-      height: 90px;
-    }
 
-    @media (max-width: 1255px) {
-      width: 80px;
-      height: 80px;
-    }
 
-    @include ipadScreen {
-      width: 150px;
-      height: 130px;
-    }
-  }
-
-  .progressbar__track {
-    fill: transparent;
-    stroke-width: 1px;
-  }
-
-  .progressbar__thumb {
-    fill: transparent;
-    stroke: color(white);
-    stroke-width: 1px;
-    transform-origin: center;
-    stroke-dasharray: 0 1;
-    transform: rotate(180deg);
-  }
 
   .progressbar text {
     font-weight: 700;
