--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -20,7 +20,7 @@
     margin: auto;
 
     @media (max-width: 1650px) {
-      padding: 0 80px;
+     // padding: 0 80px;
     }
 
     @media (max-width: 1220px) {
