--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -1,24 +1,42 @@
-.banner {
-  &__medium {
-    width: 250px;
-  }
+%mediumSize {
+  width: 250px;
+}
 
-  &__large {
-    width: 300px;
-  }
+%largeSize {
+  width: 300px;
+}
 
-  &__small {
-    width: 168px;
-  }
+%smallSize {
+  width: 168px;
+}
 
-  &__max {
-    width: 100%;
-  }
+%maxSize {
+  width: 100%;
+}
 
-  &__context {
-    width: fit-content;
-  }
+%context {
+  width: fit-content;
+}
 
+%colorGreen {
+  font-weight: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 168px;
+  height: 42px;
+  background: #009247;
+  border-radius: 5px;
+  transition: all 0.3s;
+  color: #FFF;
+  transition: all 0.3s;
+
+  &:hover {
+    background-color: #096709;
+  }
+}
+
+%colorWhite {
   padding: 16px 50px;
   display: flex;
   justify-content: center;
@@ -34,11 +52,9 @@
   transition: all 0.3s ease-in;
 
   &:hover {
-    &:hover {
-      background: #33953A;
-      border-color: #33953A;
-      box-shadow: 0 0 123px rgba(22, 131, 8, 0.6);
-    }
+    background: #33953A;
+    border-color: #33953A;
+    box-shadow: 0 0 123px rgba(22, 131, 8, 0.6);
 
     @media (max-width: 1100px) {
       padding: 15px 50px;
@@ -49,6 +65,93 @@
       font-size: 16px;
       padding: 13px 50px;
       border: 1.5px solid #fff;
+    }
+  }
+}
+
+%colorLink {
+  background-color: transparent;
+  border: none;
+}
+
+.banner {
+  &__medium {
+    @extend %mediumSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__large {
+    @extend %largeSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__small {
+    @extend %smallSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__max {
+    @extend %maxSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__context {
+    @extend %context;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
     }
   }
 }
@@ -69,14 +172,87 @@
 
     &:hover svg {
       transform: translateX(5px);
-
     }
   }
 
   text-align: left;
+  &__medium {
+    @extend %mediumSize;
 
-  &__context {
-    width: fit-content;
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
   }
 
+  &__large {
+    @extend %largeSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__small {
+    @extend %smallSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__max {
+    @extend %maxSize;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
+
+  &__context {
+    @extend %context;
+
+    &_green {
+      @extend %colorGreen;
+    }
+
+    &_white {
+      @extend %colorWhite;
+    }
+
+    &_link {
+      @extend %colorLink
+    }
+  }
 }
