--- a/styles/include/_slider.scss
+++ b/styles/include/_slider.scss
@@ -1,6 +1,7 @@
 .swiper-pagination {
-  margin: 0 auto;
+  margin: 15px auto 0;
   width: 100px !important;
+
 
   .swiper-pagination-bullet {
     width: 15px;
