--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -489,8 +489,9 @@
     &__slider {
       &_slide {
         position: relative;
-        height: 500px;
-        padding: 15px 0;
+        height: 461px;
+        max-width: 950px;
+        margin: 0 auto;
         @media (max-width: 1530px) {
           height: 600px;
         }
@@ -515,7 +516,6 @@
           height: 280px;
         }
 
-
         @media (max-width: 450px) {
           height: 240px;
         }
@@ -526,39 +526,39 @@
       }
 
       &_img {
-        max-width: 1320px;
-        margin: 0 auto;
-
         img {
-          border-radius: 15px;
+          border-radius: 20px;
           object-fit: cover;
-          height: 500px;
+          height: 461px;
         }
       }
     }
 
     &__right_element {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      background: rgba(123, 123, 123, 0.7);
+      backdrop-filter: blur(20px);
+      padding: 40px 30px;
+      border-radius: 20px 0 0 20px;
+      width: 50%;
       &_title {
-        font-size: 45px;
+        font-size: 25px;
         font-weight: bold;
-        text-transform: uppercase;
         max-width: 540px;
         line-height: 128%;
         letter-spacing: 0.025em;
         color: color(white);
 
         @media (max-width: 1100px) {
-          font-size: 40px;
+          font-size: 20px;
           max-width: 490px;
         }
 
         @media (max-width: 600px) {
-          font-size: 28px;
-          max-width: 350px;
-        }
-
-        @media (max-width: 400px) {
-          font-size: 25px;
+          font-size: 18px;
           max-width: 350px;
         }
       }
@@ -566,12 +566,12 @@
       &_text {
         font-style: normal;
         font-weight: 300;
-        font-size: 20px;
+        font-size: 15px;
         line-height: 136.5%;
         letter-spacing: 0.02em;
         color: color(white);
         max-width: 500px;
-        padding: 5px 0 50px 0;
+        padding: 5px 0 10px 0;
 
         @media (max-width: 1100px) {
           font-size: 18px;
@@ -582,51 +582,7 @@
           font-size: 16px;
           padding: 5px 0 26px 0;
         }
-
       }
-
-      &_button {
-        width: 300px;
-        padding: 16px 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 18px;
-        font-weight: 400;
-        line-height: 136.5%;
-        letter-spacing: 0.08em;
-        border: 2px solid #fff;
-        color: color(white);
-        text-shadow: 4px 3px 6px rgba(0, 0, 0, 0.31);
-        border-radius: 10px;
-        transition: all 0.3s ease-in;
-
-        &:hover {
-          background: #33953A;
-          border-color: #33953A;
-          box-shadow: 0 0 123px rgba(22, 131, 8, 0.6);
-          cursor: pointer;
-        }
-
-        @media (max-width: 1100px) {
-          padding: 15px 50px;
-          width: 250px;
-        }
-
-        @media (max-width: 600px) {
-          font-size: 16px;
-          padding: 13px 50px;
-          border: 1.5px solid #fff;
-        }
-      }
-
-      position: absolute;
-      top: 20%;
-      left: 16%;
-      background: rgba(123, 123, 123, 0.38);
-      backdrop-filter: blur(20px);
-      padding: 40px 30px;
-      border-radius: 20px;
 
       @media (max-width: 1800px) {
         left: 13%;
