--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -162,12 +162,19 @@
     align-items: center;
     color: white;
     svg{
+      width: 22px;
+      height: 22px;
+      transition: all 0.3s;
+
       path{
         fill: white;
       }
     }
+    &:hover svg{
+      transform: translateX(5px);
+    }
     span {
-      padding-right: 10px
+      padding: 10px
     }
   }
   &__medium {
