--- a/components/common/layout/Layout.module.scss
+++ b/components/common/layout/Layout.module.scss
@@ -1,4 +1,3 @@
-
 .header {
   box-shadow: 0px 3px 5px rgb(30 158 0 / 90%);
   background-color: #fff;
@@ -8,3 +7,6 @@
   z-index: 99;
 }
 
+.main{
+  margin-top: 100px;
+}
