--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -6,33 +6,42 @@
 
   label {
     position: absolute;
+    top: -20px;
     pointer-events: none;
-    transform: translate(0, 23px) scale(1);
+    transform: translate(0, 26px) scale(1);
     transform-origin: top left;
     transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-    color: #6f81a5;
+    color: grey;
     font-size: 16px;
     line-height: 1;
-    left: 16px; 
+    left: 10px; 
   }
 
-  &:focus-within label {
-    transform: translate(0, 12px) scale(0.8);
-    color: #0a53e4;
+  &:focus-within {
+    label {
+      transform: translate(0, 12px) scale(0.8);
+      color: #6f81a5;
+    }
   }
 
   input {
     width: 100%;
-    padding: 8px;
-    margin-top: 55px;
     border: none;
-    border-bottom: 1px solid #bcbdc0;
-    color: #000;
-    font-size: 14px;
+    outline: none;
+    border-bottom: 2px solid grey;
+    padding: 8px;
+    margin-bottom: 20px;
+    transition: all 0.2s;
 
     &:focus {
-      box-shadow: 0 0 0 2px #79b1ff;
+      border-bottom: 2px solid green; 
+      color: green;
     }
   }
+
+  input:focus:-ms-input-placeholder {
+    color: red;
+  }
+  
 }
 
