--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -10,16 +10,21 @@
   row-gap: 40px;
   justify-content: center;
   position: relative;
-  top: -50px;
+  top: -100px;
+  img{
+    border-radius: 20px;
+  }
 
   &_item {
     width: 315px;
+    /*
     filter: drop-shadow(0 -5px 1px rgba(255, 255, 255, .5));
+    */
     position: relative;
     &_way_box {
       position: absolute;
       backdrop-filter: blur(10px);
-      border-radius: 10px;
+      border-radius: 20px;
       width: 100%;
       height: 100%;
       overflow: hidden;
@@ -34,7 +39,6 @@
         margin-bottom: 15px;
         position: absolute;
         padding: 20px;
-
       }
 
       &_description {
