--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -1,5 +1,5 @@
 @import '../../styles/mixins.scss';
-@import '../../styles//variables.scss';
+@import '../../styles/variables.scss';
 
 .tabs__container {
   max-width: 300px;
@@ -12,23 +12,22 @@
     justify-content: space-between;
 
     li {
-      font-size: 18px;
-      padding: 0 0 15px;
-      position: relative;
       color: #313131;
       font-size: 18px;
       padding: 0 0 15px 0;
       cursor: pointer;
       position: relative;
 
-    &.active {
-      color: color(green);
-      @media (max-width: 650px) {
-        color: color(white);
-        background-color: color(green) !important;
-      } 
     }
-
+  }
+  &__line {
+    width: 100%;
+    height: 5px;
+    background: rgba(0,0,0,.247);
+    border-radius: 5px;
+    cursor: pointer;
+    &_active {
+      color: color(green);
       &:after {
         content: "";
         position: absolute;
@@ -39,13 +38,10 @@
         border-radius: 3px;
         background: color(green);
       }
+      @media (max-width: 650px) {
+        color: color(white);
+        background-color: color(green) !important;
+      }
     }
-  }
-
-  &__line {
-    width: 100%;
-    height: 5px;
-    background: rgba(0,0,0,.247);
-    border-radius: 5px;
   }
 }
