--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -1,8 +1,16 @@
+@import '../../styles/mixins.scss';
+@import '../../styles//variables.scss';
+
+
 .input__container {
   position: relative;
   display: flex;
   flex-direction: column;
   margin-top: 30px;
+  overflow: hidden;
+  @include phoneScreen {
+    width: 100%;
+  }
 
   label {
     position: absolute;
