--- a/components/checkbox/CheckBox.module.scss
+++ b/components/checkbox/CheckBox.module.scss
@@ -1,3 +1,7 @@
+@import '../../styles/mixins.scss';
+@import '../../styles//variables.scss';
+
+
 .checkbox {
 
   &__label {
@@ -15,6 +19,9 @@
     display: flex;
     align-items: center;
     margin-bottom: 12px;
+    @include phoneScreen {
+      align-items: start;
+    }
 
     input,
     svg {
@@ -37,6 +44,7 @@
       transition: box-shadow .3s;
       box-shadow: inset 0 0 0 var(--s, 1px) var(--b, var(--border));
       margin: -1px 6px 0 0;
+      padding: 10px;
       
       &:hover {
         --s: 2px;
@@ -110,8 +118,5 @@
     }
   }
 
-  // &__input {
-  //   display: none;
-  // }
 }
 
