--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -4,23 +4,22 @@
 
 .input__container {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
+  margin: 25px 0 0 0;
   overflow: hidden;
+  width: 100%;
   @include phoneScreen {
     width: 100%;
   }
 
   label {
     position: absolute;
-    top: -20px;
+    top: -13px;
     pointer-events: none;
     transform: translate(0, 26px) scale(1);
     transform-origin: top left;
     transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
     color: grey;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1;
     left: 10px; 
   }
@@ -33,20 +32,18 @@
   }
 
   input {
-    width: 100%;
     border: none;
     outline: none;
-    border-bottom: 2px solid grey;
-    padding: 8px;
-    margin-bottom: 20px;
+    border-bottom: 1px solid grey;
+    padding: 15px 0 6px 11px;
     transition: all 0.2s;
 
     &:focus {
-      border-bottom: 2px solid green; 
-      color: green;
+      border-bottom: 1px solid green; 
+      color: color(green);
     }
   }
-
+  
   input:focus:-ms-input-placeholder {
     color: red;
   }
