--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -10,16 +10,37 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 650px) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 15px;
+    }
 
     li {
-      color: #313131;
       font-size: 18px;
       padding: 0 0 15px 0;
       cursor: pointer;
       position: relative;
-
+      @media (max-width: 650px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        width: 100%;
+        background-color: color(green);
+        color: color(white);
+        border-radius: 5px;
+        font-size: 16px;
+        padding: 0;
+        &_active {
+          color: color(white);
+          background-color: color(green);
+        } 
+      }
     }
   }
+
   &__line {
     width: 100%;
     height: 5px;
@@ -37,14 +58,18 @@
         height: 5px;
         border-radius: 3px;
         background: color(green);
-      }
-      @media (max-width: 650px) {
-        color: color(white);
-        background-color: color(green) !important;
-      }
+        @media (max-width: 650px) {
+          display: none;
+        }
+      }  
+    }
+
+    @media (max-width: 650px) {
+      display: none;
     }
   }
+
   &_context{
-margin-top: 20px;
+    margin-top: 20px;
   }
 }
