--- a/components/input/input.module.scss
+++ b/components/input/input.module.scss
@@ -1,10 +1,9 @@
 @import '../../styles/mixins.scss';
 @import '../../styles//variables.scss';
 
-
 .input__container {
   position: relative;
-  margin: 25px 0 0 0;
+  margin: 12px 0 0 0;
   overflow: hidden;
   width: 100%;
   @include phoneScreen {
@@ -12,21 +11,20 @@
   }
 
   label {
-    position: absolute;
-    top: -13px;
-    pointer-events: none;
-    transform: translate(0, 26px) scale(1);
-    transform-origin: top left;
-    transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-    color: grey;
+    color: #5A5A5A;
     font-size: 14px;
-    line-height: 1;
-    left: 10px; 
+    line-height: 16px;
+    padding: 5px 5px;
+    pointer-events: none;
+    position: absolute;
+    transition: all 200ms;
+    transform: translateY(-30px) scale(1);
+    left: 0px;
   }
 
   &:focus-within {
     label {
-      transform: translate(0, 12px) scale(0.8);
+      transform: translateY(-42px) scale(0.8);
       color: #6f81a5;
     }
   }
@@ -37,16 +35,15 @@
     border-bottom: 1px solid grey;
     padding: 15px 0 6px 11px;
     transition: all 0.2s;
-
     &:focus {
       border-bottom: 1px solid green; 
       color: color(green);
     }
   }
-  
-  input:focus:-ms-input-placeholder {
-    color: red;
-  }
-  
-}
 
+  input:focus + label,
+  input:not(:placeholder-shown) + label {
+    // transform: translateY(-40px) scale(0.8);
+    opacity: 0.8;
+  }
+}
