--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -1,5 +1,5 @@
 @import '../../styles/mixins.scss';
-@import '../../styles//variables.scss';
+@import '../../styles/variables.scss';
 
 //Форма авторизации
 .authorization__form {
@@ -15,7 +15,7 @@
   &__item__forgot {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     margin: 22px 0;
     input {
       width: 21px !important;
@@ -59,7 +59,7 @@
     @include phoneScreen {
       display: flex;
       flex-direction: column;
-      row-gap: 0px;
+      row-gap: 0;
     }
 
     &:nth-child(4) {
