--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 22px 0;
+    margin: 0 0 20px 0;
 
     input {
       width: 21px !important;
