--- a/components/equipment/Equipment.module.scss
+++ b/components/equipment/Equipment.module.scss
@@ -18,9 +18,16 @@
   .col5 { grid-area: col5; }
 
   &_item{
-    color: red;
+    overflow: hidden;
+    border-radius: 12px;
+
+    &:hover img{
+      transform: scale(1.1);
+    }
     img{
-      width:100%
+      width:100%;
+      transition: all 0.3s;
+
     }
   }
 }
