--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -238,7 +238,6 @@
     }
   }
 }
-
 .homecategory {
   &_banner {
     &__slider {
@@ -482,7 +481,6 @@
     }
   }
 }
-
 .industries {
   &_banner {
     &__slider {
@@ -683,4 +681,246 @@
     }
   }
 }
+.pageProduct {
+  &_banner {
+    &__slider {
+      &_slide {
+        position: relative;
+        height: 500px;
+        @media (max-width: 1530px) {
+          height: 600px;
+        }
 
+        @media (max-width: 1400px) {
+          height: 550px;
+        }
+
+        @media (max-width: 1240px) {
+          height: 500px;
+        }
+
+        @media (max-width: 830px) {
+          height: 420px;
+        }
+
+        @media (max-width: 610px) {
+          height: 350px;
+        }
+
+        @media (max-width: 500px) {
+          height: 280px;
+        }
+
+
+        @media (max-width: 450px) {
+          height: 240px;
+        }
+
+        @media (max-width: 400px) {
+          height: 220px;
+        }
+      }
+
+      &_img {
+        max-width: 1320px;
+        margin: 0 auto;
+
+        img {
+          border-radius: 15px;
+          object-fit: cover;
+          height: 500px;
+        }
+      }
+    }
+
+    &__right_element {
+      &_title {
+        font-size: 45px;
+        font-weight: bold;
+        text-transform: uppercase;
+        max-width: 540px;
+        line-height: 128%;
+        letter-spacing: 0.025em;
+        color: color(white);
+
+        @media (max-width: 1100px) {
+          font-size: 40px;
+          max-width: 490px;
+        }
+
+        @media (max-width: 600px) {
+          font-size: 28px;
+          max-width: 350px;
+        }
+
+        @media (max-width: 400px) {
+          font-size: 25px;
+          max-width: 350px;
+        }
+      }
+
+      &_text {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 20px;
+        line-height: 136.5%;
+        letter-spacing: 0.02em;
+        color: color(white);
+        max-width: 500px;
+        padding: 5px 0 50px 0;
+
+        @media (max-width: 1100px) {
+          font-size: 18px;
+          padding: 5px 0 35px 0;
+        }
+
+        @media (max-width: 600px) {
+          font-size: 16px;
+          padding: 5px 0 26px 0;
+        }
+
+      }
+
+      &_button {
+        width: 300px;
+        padding: 16px 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 136.5%;
+        letter-spacing: 0.08em;
+        border: 2px solid #fff;
+        color: color(white);
+        text-shadow: 4px 3px 6px rgba(0, 0, 0, 0.31);
+        border-radius: 10px;
+        transition: all 0.3s ease-in;
+
+        &:hover {
+          background: #33953A;
+          border-color: #33953A;
+          box-shadow: 0 0 123px rgba(22, 131, 8, 0.6);
+          cursor: pointer;
+        }
+
+        @media (max-width: 1100px) {
+          padding: 15px 50px;
+          width: 250px;
+        }
+
+        @media (max-width: 600px) {
+          font-size: 16px;
+          padding: 13px 50px;
+          border: 1.5px solid #fff;
+        }
+      }
+
+      position: absolute;
+      top: 20%;
+      left: 16%;
+      background: rgba(123, 123, 123, 0.38);
+      backdrop-filter: blur(20px);
+      padding: 40px 30px;
+      border-radius: 20px;
+
+      @media (max-width: 1800px) {
+        left: 13%;
+      }
+
+      @media (max-width: 1700px) {
+        left: 10%;
+      }
+
+      @media (max-width: 1600px) {
+        left: 8%;
+      }
+
+      @media (max-width: 1500px) {
+        left: 6%;
+      }
+
+      @media (max-width: 1100px) {
+        top: 16%;
+        left: 5%;
+        padding: 25px 20px;
+        border-radius: 20px;
+      }
+
+      @media (max-width: 600px) {
+        right: 5%;
+      }
+
+      @media (max-width: 500px) {
+        top: 12%;
+      }
+    }
+
+    &__slide_video {
+      &_video {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      &_info_box {
+        position: absolute;
+        top: 30%;
+        max-width: 800px;
+        padding: 0 15px;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+        z-index: 2 !important;
+      }
+
+      &_info {
+        text-align: center;
+      }
+
+      &_title_video {
+        font-size: 100px;
+        text-align: center;
+        color: color(white);
+        text-transform: uppercase;
+        letter-spacing: 5px;
+        margin-bottom: 20px;
+
+        @include ipadScreen {
+          font-size: 60px;
+          margin-bottom: 12px;
+        }
+      }
+
+      &_text_video {
+        color: color(white);
+        font-size: 18px;
+        letter-spacing: 5px;
+        line-height: 145%;
+        text-align: center;
+
+        @include ipadScreen {
+          font-size: 16px;
+          letter-spacing: 1px;
+        }
+      }
+
+      position: relative;
+
+      &:after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: rgba(123, 123, 123, 0.38);
+        backdrop-filter: blur(20px);
+        z-index: 1;
+      }
+    }
+  }
+}
