--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -1,75 +1,154 @@
 @import '../../styles/mixins.scss';
 @import '../../styles/variables.scss';
 
-.tabs__container {
-  max-width: 300px;
-  margin: 0 auto 50px;
-  padding-top: 50px;
- 
-  &__menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    @media (max-width: 650px) {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-    }
+.small300 {
+  .tabs__container {
+    max-width: 300px;
+    margin: 0 auto 50px;
+    padding-top: 50px;
 
-    li {
-      font-size: 18px;
-      padding: 0 0 15px 0;
-      cursor: pointer;
-      position: relative;
+    &__menu {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       @media (max-width: 650px) {
-        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 50px;
-        width: 100%;
-        background-color: color(green);
-        color: color(white);
-        border-radius: 5px;
-        font-size: 16px;
-        padding: 0;
-        &_active {
-          color: color(white);
+        gap: 15px;
+      }
+
+      li {
+        font-size: 18px;
+        padding: 0 0 15px 0;
+        cursor: pointer;
+        position: relative;
+        @media (max-width: 650px) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 50px;
+          width: 100%;
           background-color: color(green);
-        } 
+          color: color(white);
+          border-radius: 5px;
+          font-size: 16px;
+          padding: 0;
+          &_active {
+            color: color(white);
+            background-color: color(green);
+          }
+        }
       }
     }
-  }
 
-  &__line {
-    width: 100%;
-    height: 5px;
-    background: rgba(0,0,0,.247);
-    border-radius: 5px;
-    cursor: pointer;
-    &_active {
-      color: color(green);
-      &:after {
-        content: "";
-        position: absolute;
-        bottom: -16%;
-        left: 0;
-        width: 100%;
-        height: 5px;
-        border-radius: 3px;
-        background: color(green);
-        @media (max-width: 650px) {
-          display: none;
+    &__line {
+      width: 100%;
+      height: 5px;
+      background: rgba(0, 0, 0, .247);
+      border-radius: 5px;
+      cursor: pointer;
+
+      &_active {
+        color: color(green);
+
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: -16%;
+          left: 0;
+          width: 100%;
+          height: 5px;
+          border-radius: 3px;
+          background: color(green);
+          @media (max-width: 650px) {
+            display: none;
+          }
         }
-      }  
+      }
+
+      @media (max-width: 650px) {
+        display: none;
+      }
     }
 
-    @media (max-width: 650px) {
-      display: none;
+    &_context {
+      margin-top: 20px;
     }
   }
+}
+.max {
+  .tabs__container {
+    margin: 0 auto 50px;
+    padding-top: 50px;
 
-  &_context{
-    margin-top: 20px;
+    &__menu {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      @media (max-width: 650px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+      }
+
+      li {
+        font-size: 18px;
+        padding: 0 0 15px 0;
+        cursor: pointer;
+        position: relative;
+        @media (max-width: 650px) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 50px;
+          width: 100%;
+          background-color: color(green);
+          color: color(white);
+          border-radius: 5px;
+          font-size: 16px;
+          padding: 0;
+          &_active {
+            color: color(white);
+            background-color: color(green);
+          }
+        }
+      }
+    }
+
+    &__line {
+      width: 100%;
+      height: 5px;
+      background: rgba(0, 0, 0, .247);
+      border-radius: 5px;
+      cursor: pointer;
+
+      &_active {
+        color: color(green);
+
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: -16%;
+          left: 0;
+          width: 100%;
+          height: 5px;
+          border-radius: 3px;
+          background: color(green);
+          @media (max-width: 650px) {
+            display: none;
+          }
+        }
+      }
+
+      @media (max-width: 650px) {
+        display: none;
+      }
+    }
+
+    &_context {
+      margin-top: 20px;
+    }
   }
 }
