--- a/features/equipment/EquipmentPage/Euipment.module.scss
+++ b/features/equipment/EquipmentPage/Euipment.module.scss
@@ -1,6 +1,9 @@
 .equipment__container {
-  display: grid;
+  display: flex;
   grid-template-columns: 250px 1fr;
   column-gap: 80px;
   padding-top: 40px;
+  &:first-child{
+    width: 250px;
+  }
 }
