--- a/features/typo_size/sertificates/Sertificates.module.scss
+++ b/features/typo_size/sertificates/Sertificates.module.scss
@@ -1,3 +1,29 @@
-.Sertificates_container{
-  display: flex;
+.sertificates_container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  &_titleimg{
+    display: flex;
+    flex-direction: column;
+
+  }
+  .title{
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    text-align: center;
+    line-height: 140%;
+    color: #548848;
+    font-size: 18px;
+    max-width: 200px;
+    margin: 0 auto 8px auto;
+    transition: all 0.3s;
+    margin-top: 10px;
+
+  }
+  .desc{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
 }
