--- a/features/equipment/EquipmentPage/utp/Utp.module.scss
+++ b/features/equipment/EquipmentPage/utp/Utp.module.scss
@@ -2,7 +2,8 @@
 @import '../../../../styles/variables.scss';
 
 .utp__container {
-
+  position: relative;
+  margin-top: 30px;
   &__top {
     display: flex;
     align-items: center;
