--- a/styles/include/_slider.scss
+++ b/styles/include/_slider.scss
@@ -39,4 +39,13 @@
       margin-left: -5px;
     }
   }
+  .swiper-wrapper{
+    position: relative;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+    display: flex;
+    transition-property: transform;
+    box-sizing: content-box;
+  }
 }
