--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -686,7 +686,6 @@
     &__slider {
       &_slide {
         position: relative;
-        height: 500px;
         @media (max-width: 1530px) {
           height: 600px;
         }
@@ -728,7 +727,8 @@
         img {
           border-radius: 15px;
           object-fit: cover;
-          height: 500px;
+          width: 100%;
+          height: 100%;
         }
       }
     }
