--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -1,187 +1,3 @@
-/*.modal {
-
-  .backdrop {
-    opacity: 0;
-    transition: all 3s;
-
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: var(--color-background-wrapper-modal);
-    z-index: 500;
-
-    &.show {
-      opacity: 1;
-      transition: all 3s;
-    }
-  }
-
-  !*.wrapper {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 700;
-    width: inherit;
-
-    .styled_modal {
-      z-index: 100;
-      position: relative;
-      margin: auto;
-      border-radius: 8px;
-      background: var(--color-background-primary);
-
-      .header {
-        border-radius: 8px 8px 0 0;
-        justify-content: space-between;
-        padding: 0.3rem;
-
-        .header_text {
-          align-self: center;
-
-          .cross {
-            position: absolute;
-            top: 15px;
-            right: 10px;
-            z-index: 99999;
-            cursor: pointer;
-            background: none;
-            width: 16px;
-            height: 16px;
-
-            &:hover {
-              cursor: pointer;
-            }
-          }
-          h2{
-            font-style: normal;
-            font-weight: 600;
-            font-size: 20px;
-            line-height: 28px;
-            color: var(--color-text-primary);
-            border-bottom: 1px solid var(--color-border-secondary);
-            padding-bottom: 5px;
-            text-transform: uppercase;
-          }
-        }
-      }
-      .content {
-        padding: 10px;
-        max-height: 30rem;
-        overflow-x: hidden;
-        overflow-y: auto;
-      }
-    }
-  }*!
-
-  .wrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 700;
-
-    .scroll_container {
-      margin: auto;
-      max-height: 90vh;
-      overflow: auto;
-
-      .flex_container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        background: white;
-
-        .container {
-          padding: 20px 20px 0 20px;
-
-          .header_text {
-            align-self: center;
-            display: flex;
-            justify-content: space-between;
-
-            .cross {
-              top: 15px;
-              right: 10px;
-              z-index: 99999;
-              cursor: pointer;
-              background: none;
-              width: 16px;
-              height: 16px;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-
-            h2 {
-              font-style: normal;
-              font-weight: 600;
-              font-size: 20px;
-              line-height: 28px;
-              color: var(--color-text-primary);
-              border-bottom: 1px solid var(--color-border-secondary);
-              padding-bottom: 5px;
-              text-transform: uppercase;
-            }
-          }
-        }
-
-        .content {
-          margin-top: 20px;
-        }
-
-        .footer {
-          height: 20px;
-          background-color: var(--color-background-primary);
-          position: sticky;
-          bottom: 0;
-        }
-      }
-    }
-  }
-
-
-  .theme {
-    &__modal {
-      width: 450px;
-    }
-
-    &__full_modal {
-      max-width: 1600px;
-    }
-  }
-}
-
-
-@keyframes appear {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@keyframes slide-in {
-  from {
-    transform: translateY(-150px);
-  }
-  to {
-    transform: translateY(0);
-  }
-}*/
-
-
-
-
-
 @import '../../styles/mixins.scss';
 @import '../../styles/variables.scss';
 
@@ -191,14 +7,17 @@
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100%;
   z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.445);
-  animation-name: appear;
+  background: rgba(19, 28, 8, 0.8);
+  backdrop-filter: blur(3px);
+  animation-name: bgModal;
   animation-duration: 300ms;
+  @include phoneScreen {
+    padding: 0 10px;
+  }
 
   .modal_dialog {
     width: 100%;
@@ -210,12 +29,10 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    // box-shadow: 0 4px 8px 0 var(--color-shadow-primary), 0 6px 20px 0 var(--color-shadow-primary);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: slide-in;
-    animation-duration: 0.5s;
-
+    animation-duration: 0.3s;
     .modal_header,
     .modal_footer {
       display: flex;
@@ -223,54 +40,24 @@
     }
 
     .modal_header {
-      padding: 10px 5px 5px 30px;
+      padding: 30px 30px 0 30px;
       justify-content: space-between;
-
       .modal_title {
-        margin: 0;
         font-style: normal;
         font-weight: 600;
         font-size: 20px;
         line-height: 28px;
         color: color(dark);
-        border-bottom: 1px solid #000;
-        padding-bottom: 5px;
         text-transform: uppercase;
-      }
-
-      .modal_close {
-        cursor: pointer;
-        background: none;
-        width: 16px;
-        height: 16px;
       }
     }
 
     .modal_body {
       overflow: auto;
-      margin-bottom: 20px;
-
       .modal_content {
-        padding: 5px 20px 20px 30px;
+        padding: 20px 30px 30px 30px;
         color: color(dark);
         line-height: 20px;
-
-        h3 {
-          text-transform: uppercase;
-          padding: 15px 0 10px 0;
-          font-weight: 700;
-        }
-        p{
-          padding-bottom: 5px;
-          strong{
-            font-weight: 600;
-          }
-        }
-        ul{
-          li{
-            padding-bottom: 5px;
-          }
-        }
       }
     }
   }
@@ -287,7 +74,7 @@
 }
 
 
-@keyframes appear {
+@keyframes bgModal {
   from {
     opacity: 0;
   }
@@ -296,11 +83,20 @@
   }
 }
 
-@keyframes slide-in {
+@keyframes appear {
   from {
-    transform: translateY(-150px);
+    transform: scale(0);
   }
   to {
-    transform: translateY(0);
+    transform: scale(1);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
   }
 }
